@@ -5,6 +5,11 @@
     <link href="/images/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" />
     <link href="/images/favicon.ico" rel="icon" type="image/vnd.microsoft.icon" />
     <link href="/themedstyles.css" rel="stylesheet" type="text/css" />
+    <link href="/custom.css" rel="stylesheet" type="text/css" />
+    <script type=text/javascript>
+    // The time out value is set to be 60,000 milli-seconds (or 60 seconds)
+    setTimeout(' document.location=document.location' ,60000);
+    </script>
   </head>
   <body id="login-wrapper">
     <img src="/images/login_gradient.gif" id="login-gradient" />
